--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ttf-iosevka-ss08"
 version = "0.1.0"
-authors = ["arturo castro <arturo@openframeworks.cc>"]
+authors = ["Belleve Invis (belleve@typeof.net)"]
 license-file = "LICENSE.md"
 homepage = "https://github.com/be5invis/Iosevka"
 repository = "http://github.com/arturoc/ttf-iosevka-ss08"
